MultiSelect shows an X icon in IE and shifts typed text to the left. Fixes telerik/kendo-ui-core#1082

--- a/styles/web/common/inputs.less
+++ b/styles/web/common/inputs.less
@@ -478,6 +478,11 @@ body .k-datetimepicker .k-select
     float: left;
 }
 
+.k-multiselect-wrap .k-input::-ms-clear
+{
+    display: none;
+}
+
 .k-multiselect-wrap li
 {
     margin: 1px 0 1px 1px;
